--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,9 @@ coverage.xml
 # Translations
 *.mo
 
+# PyCharm
+.idea/
+
 # Mr Developer
 .mr.developer.cfg
 .project
@@ -51,4 +54,3 @@ coverage.xml
 
 # Sphinx documentation
 docs/_build/
-
