--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,8 @@
 language: python
 python:
     - "3.4"
-env:
-    - DJANGO="https://www.djangoproject.com/download/1.7c1/tarball/"
 install:
-    - "pip install flake8 ${DJANGO}"
+    - "pip install -r requirements.txt"
+    - "pip install -r testing_requirements.txt"
 script:
     - "flake8 ."
