--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 https://www.djangoproject.com/download/1.7c1/tarball/
 Django
+Werkzeug==0.9.6
 django-extensions==1.3.10
 django-redis==3.6.2
 ipdb==0.8
