--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-https://www.djangoproject.com/download/1.7c1/tarball/
-Django
+https://www.djangoproject.com/download/1.7c2/tarball/
 Werkzeug==0.9.6
 django-extensions==1.3.10
 django-redis==3.6.2
-ipdb==0.8
+redis==2.10.3
 six==1.7.3
+uWSGI==2.0.6
