--- a/nginx.conf
+++ b/nginx.conf
@@ -4,16 +4,31 @@ upstream django {
     server unix:///home/vagrant/streisand/nginx-uwsgi.sock;
 }
 
-# configuration of the server
+# configuration of the tracker server
 server {
-    # the port your site will be served on
-    listen      8000;
-    # the domain name it will serve for
+    listen 7070;
     server_name localhost; # substitute your machine's IP address or FQDN
-    charset     utf-8;
 
     # request body for announces should be empty
     client_max_body_size 1;
+
+    # send all non-static requests to Django via uWSGI
+    location / {
+        uwsgi_pass  django;
+        include     uwsgi_params;
+
+        # Don't allow request methods other than GET
+        limit_except GET {
+            deny all;
+        }
+    }
+}
+
+# configuration of the site server
+server {
+    listen 80;
+    server_name localhost; # substitute your machine's IP address or FQDN
+    charset utf-8;
 
     # serve static files directly from nginx
     location /static {
