separate WSGI applications, urls, settings and sockets for tracker and www

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,10 @@
 
-# the upstream component nginx will connect to
-upstream django {
-    server unix:///home/vagrant/streisand/nginx-uwsgi.sock;
+# the upstream components nginx will connect to
+upstream tracker {
+    server unix:///home/vagrant/streisand/nginx-uwsgi-tracker.sock;
+}
+upstream www {
+    server unix:///home/vagrant/streisand/nginx-uwsgi-www.sock;
 }
 
 # configuration of the tracker server
@@ -14,7 +17,7 @@ server {
 
     # send all non-static requests to Django via uWSGI
     location / {
-        uwsgi_pass  django;
+        uwsgi_pass  tracker;
         include     uwsgi_params;
 
         # Don't allow request methods other than GET
@@ -27,17 +30,18 @@ server {
 # configuration of the site server
 server {
     listen 80;
+    #listen 8000;
     server_name localhost; # substitute your machine's IP address or FQDN
     charset utf-8;
 
     # serve static files directly from nginx
     location /static {
-        alias /home/vagrant/streisand/streisand/static; # your Django project's static files - amend as required
+        alias /home/vagrant/streisand/streisand/static; # Django project static files - amend as required
     }
 
     # send all non-static requests to Django via uWSGI
     location / {
-        uwsgi_pass  django;
+        uwsgi_pass  www;
         include     uwsgi_params;
     }
 }
