--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 Django==1.7
 Werkzeug==0.9.6
+celery==3.1.15
 django-extensions==1.4.0
 django-redis==3.7.1
+kombu==3.0.23
 redis==2.10.3
-rq==0.4.6
 six==1.8.0
 uWSGI==2.0.7
