--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Django==1.7
 Werkzeug==0.9.6
 celery==3.1.15
 django-extensions==1.4.0
+django-picklefield==0.3.1
 django-redis==3.7.1
 kombu==3.0.23
 redis==2.10.3
