--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 Django==1.7
 Werkzeug==0.9.6
 celery==3.1.15
+django-debug-toolbar==1.2.1
 django-extensions==1.4.0
 django-picklefield==0.3.1
 django-redis==3.7.1
+django-su==0.4.7
 kombu==3.0.23
 redis==2.10.3
 six==1.8.0
