--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Werkzeug==0.9.6
 celery==3.1.15
 django-debug-toolbar==1.2.1
 django-extensions==1.4.0
+django-grappelli==2.6.1
 django-picklefield==0.3.1
 django-redis==3.7.1
 django-su==0.4.7
