--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Werkzeug==0.9.6
 celery==3.1.15
 django-debreach==1.0.1
 django-debug-toolbar==1.2.1
+django-email-bandit==1.0
 django-extensions==1.4.0
 django-grappelli==2.6.1
 django-picklefield==0.3.1
