--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ script:
     - "flake8 . --exclude=migrations --ignore=E501,F403"
     - "./streisand/manage.py makemigrations"
     - "./streisand/manage.py migrate"
-    - "./streisand/manage.py test"
+    - "./streisand/manage.py test streisand"
