provision the vagrant box using ansible

--- a/uwsgi-tracker.ini
+++ b/uwsgi-tracker.ini
@@ -1,11 +1,11 @@
 [uwsgi]
-chdir = /home/vagrant/streisand/streisand
+chdir = /var/www/streisand/streisand
 module = streisand.tracker_wsgi:application
 env = DJANGO_SETTINGS_MODULE=streisand.settings.tracker_settings
-home = /home/vagrant/.virtualenvs/streisand
+home = /home/vagrant/.venv
 master = True
 pidfile = /tmp/streisand-tracker-master.pid
 vacuum = True
-socket = /home/vagrant/streisand/nginx-uwsgi-tracker.sock
+socket = /var/www/streisand/nginx-uwsgi-tracker.sock
 max-requests = 5000
-daemonize = /home/vagrant/streisand/tracker-uwsgi.log
+daemonize = /var/www/streisand/tracker-uwsgi.log
