--- a/uwsgi-www.ini
+++ b/uwsgi-www.ini
@@ -1,11 +1,11 @@
 [uwsgi]
-chdir = /home/vagrant/streisand/streisand
+chdir = /var/www/streisand/streisand
 module = streisand.www_wsgi:application
 env = DJANGO_SETTINGS_MODULE=streisand.settings.www_settings
-home = /home/vagrant/.virtualenvs/streisand
+home = /home/vagrant/.venv
 master = True
 pidfile = /tmp/streisand-www-master.pid
 vacuum = True
-socket = /home/vagrant/streisand/nginx-uwsgi-www.sock
+socket = /var/www/streisand/nginx-uwsgi-www.sock
 max-requests = 5000
-daemonize = /home/vagrant/streisand/www-uwsgi.log
+daemonize = /var/www/streisand/www-uwsgi.log
