--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 Django==1.7.4
 Werkzeug==0.10.1
+anyjson==0.3.3
+amqp==1.4.6
+billiard==3.3.0.19
 celery==3.1.17
+dj-database-url==0.3.0
 django-debreach==1.1.0
 # django-debug-toolbar==1.2.2
 -e git://github.com/tim-schilling/django-debug-toolbar.git@2ab2c8361f893fc171bba06d53a66fa7dc6f26a2#egg=debug_toolbar
@@ -12,6 +16,7 @@ django-redis==3.8.2
 django-su==0.4.7
 jsonfield==1.0.2
 kombu==3.0.24
+psycopg2==2.6
 pytz>=2014.10
 redis==2.10.3
 six==1.9.0
