optimizing postgres connection config (https://docs.djangoproject.com/en/1.7/ref/databases/#optimizing-postgresql-s-configuration)

--- a/provision/postgres/files/postgresql.conf
+++ b/provision/postgres/files/postgresql.conf
@@ -487,7 +487,7 @@ log_timezone = 'UTC'
 #temp_tablespaces = ''          # a list of tablespace names, '' uses
                     # only default tablespace
 #check_function_bodies = on
-#default_transaction_isolation = 'read committed'
+default_transaction_isolation = 'read committed'
 #default_transaction_read_only = off
 #default_transaction_deferrable = off
 #session_replication_role = 'origin'
@@ -514,8 +514,7 @@ timezone = 'UTC'
                     # You can create your own file in
                     # share/timezonesets/.
 #extra_float_digits = 0         # min -15, max 3
-#client_encoding = sql_ascii        # actually, defaults to database
-                    # encoding
+client_encoding = 'UTF8'         # actually, defaults to database encoding
 
 # These settings are initialized by initdb, but they can be changed.
 lc_messages = 'en_US.UTF-8'         # locale for system error message
