--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ install:
     - "pip install -r requirements.txt"
     - "pip install -r testing_requirements.txt"
 script:
-    - "flake8 . --exclude=migrations --ignore=E501,F403"
+    - "flake8 . --exclude=migrations --ignore=E501,F403,W503"
     - "./streisand/manage.py makemigrations"
     - "./streisand/manage.py migrate"
     - "./streisand/manage.py test streisand"
