--- a/requirements.txt
+++ b/requirements.txt
@@ -12,12 +12,13 @@ django-email-bandit==1.0
 django-extensions==1.5.0
 django-grappelli==2.6.3
 django-picklefield==0.3.1
-django-redis==3.8.2
+django-redis==3.8.3
 django-su==0.4.7
 jsonfield==1.0.2
 kombu==3.0.24
 psycopg2==2.6
 pytz>=2014.10
 redis==2.10.3
+requests==2.5.1
 six==1.9.0
 uWSGI==2.0.9
