--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,17 @@
-Django==1.7.5
+Django==1.7.6
+Markdown==2.6.1
 Werkzeug==0.10.1
 anyjson==0.3.3
 amqp==1.4.6
+beautifulsoup4==4.3.2
 billiard==3.3.0.19
 celery==3.1.17
 dj-database-url==0.3.0
 django-contrib-comments==1.5
 django-debreach==1.2.1
-# django-debug-toolbar==1.2.2
--e git://github.com/tim-schilling/django-debug-toolbar.git@2ab2c8361f893fc171bba06d53a66fa7dc6f26a2#egg=debug_toolbar
+django-debug-toolbar==1.3.0
 django-email-bandit==1.0
-django-extensions==1.5.0
+django-extensions==1.5.1
 django-grappelli==2.6.3
 django-picklefield==0.3.1
 django-redis==3.8.3
@@ -20,7 +21,7 @@ kombu==3.0.24
 psycopg2==2.6
 pytz>=2014.10
 redis==2.10.3
-requests==2.5.3
+requests==2.6.0
 six==1.9.0
 uWSGI==2.0.9
 -e git://github.com/django-wiki/django-wiki.git@master#egg=wiki
