--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,28 @@
-Django==1.7.7
+Django==1.8
 Markdown==2.6.1
-Werkzeug==0.10.1
+Werkzeug==0.10.4
 anyjson==0.3.3
 amqp==1.4.6
 beautifulsoup4==4.3.2
 billiard==3.3.0.19
 celery==3.1.17
 dj-database-url==0.3.0
-django-contrib-comments==1.5
+-e git://github.com/django/django-contrib-comments.git@master#egg=django_comments
 django-debreach==1.2.1
 django-debug-toolbar==1.3.0
 django-email-bandit==1.0
-django-extensions==1.5.1
-django-grappelli==2.6.3
+django-extensions==1.5.2
+django-grappelli==2.6.4
+#dajngo-mptt==0.7.1
+-e git://github.com/django-mptt/django-mptt.git@master#egg=mptt
 django-picklefield==0.3.1
 django-redis==3.8.3
+-e git://github.com/ojii/django-sekizai.git@master#egg=sekizai
 django-su==0.4.7
 jsonfield==1.0.3
 kombu==3.0.24
 psycopg2==2.6
-pytz>=2014.10
+pytz>=2015.2
 redis==2.10.3
 requests==2.6.0
 six==1.9.0
