--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,23 @@
-Django==1.8.2
+Django==1.8.3
 Markdown==2.6.2
+Pillow==2.9.0
 Werkzeug==0.10.4
 anyjson==0.3.3
 amqp==1.4.6
-beautifulsoup4==4.3.2
+beautifulsoup4==4.4.0
 billiard==3.3.0.20
 celery==3.1.18
 dj-database-url==0.3.0
 django-debreach==1.2.1
-django-debug-toolbar==1.3.0
+django-debug-toolbar==1.3.2
 django-email-bandit==1.0
 django-extensions==1.5.5
 django-grappelli==2.6.5
 django-mptt==0.7.4
 django-picklefield==0.3.1
-django-redis==4.1.0
+django-redis==4.2.0
 django-sekizai==0.8.2
-django-su==0.4.7
+django-su==0.4.8
 jsonfield==1.0.3
 kombu==3.0.26
 psycopg2==2.6.1
@@ -24,5 +25,5 @@ pytz>=2015.4
 redis==2.10.3
 requests==2.7.0
 six==1.9.0
-uWSGI==2.0.10
+uWSGI==2.0.11
 -e git://github.com/django-wiki/django-wiki.git@master#egg=wiki
