trying out coveralls

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,6 @@ script:
     - "flake8 . --exclude=migrations --ignore=E501,F403,W503"
     - "./streisand/manage.py makemigrations"
     - "./streisand/manage.py migrate"
-#    - "./streisand/manage.py test streisand"
     - "coverage run ./streisand/manage.py test streisand"
+after_success:
+    - coveralls
