--- a/.coveragerc
+++ b/.coveragerc
@@ -1,9 +1,21 @@
 [run]
-source =
-    streisand
+
+source = streisand
+branch = True
+
 
 [report]
+
 omit =
-    *__init__.py
+    manage.py
+    */__init__.py
     */tests.py
     */migrations/*
+
+exclude_lines =
+    pragma: no cover
+    def __repr__
+    raise AssertionError
+    raise NotImplementedError
+    if settings.DEBUG
+    if __name__ == .__main__.:
