--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 Django==1.8.6
-Markdown==2.6.3
+Markdown==2.6.5
 Pillow==2.9.0
 Werkzeug==0.10.4
 anyjson==0.3.3
 amqp==1.4.7
+bbcode==1.0.21
 beautifulsoup4==4.4.1
 billiard==3.3.0.21
 celery==3.1.19
