--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,27 @@
-Django==1.8.6
-Markdown==2.6.5
-Pillow==2.9.0
-Werkzeug==0.10.4
+Django==1.9.5
+Markdown==2.6.6
+Pillow==3.2.0
+Werkzeug==0.11.8
 anyjson==0.3.3
-amqp==1.4.7
-bbcode==1.0.21
+amqp==1.4.9
+bbcode==1.0.22
 beautifulsoup4==4.4.1
-billiard==3.3.0.21
-celery==3.1.19
-dj-database-url==0.3.0
-django-debreach==1.2.1
+billiard==3.3.0.23
+celery==3.1.23
+dj-database-url==0.4.1
+django-debreach==1.3.0
 django-debug-toolbar==1.4
-django-email-bandit==1.0
-django-extensions==1.5.9
-django-grappelli==2.7.2
-django-mptt==0.7.4
+django-extensions==1.6.1
+django-grappelli==2.8.1
 django-picklefield==0.3.2
-django-redis==4.3.0
-django-sekizai==0.8.2
-django-su==0.4.8
-jsonfield==1.0.3
-kombu==3.0.29
+django-ratelimit==0.6.0
+django-redis==4.4.1
+django-su==0.5.1
+kombu==3.0.35
 psycopg2==2.6.1
-pytz>=2015.7
+pytz>=2016.3
 redis==2.10.5
 requests==2.7.0
 six==1.10.0
-uWSGI==2.0.11.2
--e git://github.com/django-wiki/django-wiki.git@master#egg=wiki
+sqlparse==0.1.19
+uWSGI==2.0.12
