changed mysql driver to work around OOM problems

--- a/provision/django/tasks/main.yml
+++ b/provision/django/tasks/main.yml
@@ -18,6 +18,7 @@
       - libpcre3                # for uWSGI
       - libpcre3-dev            # for uWSGI
       - libjpeg8-dev            # for Pillow
+      - libmysqlclient-dev      # for mysqlclient
 
 - name: upgrade existing system packages
   sudo: yes
