--- a/provision/django/vars/main.yml
+++ b/provision/django/vars/main.yml
@@ -1,2 +1,2 @@
-app_path: /var/www/streisand
-virtualenv_path: /home/vagrant/.venv
+app_path: "/var/www/streisand"
+virtualenv_path: "{{ userhome }}/.venv"
