--- a/provision/postgres/tasks/main.yml
+++ b/provision/postgres/tasks/main.yml
@@ -1,43 +1,43 @@
 - name: add postgres repo
-  sudo: yes
-  apt_repository: repo='deb http://apt.postgresql.org/pub/repos/apt trusty-pgdg main' state=present
+  become: yes
+  apt_repository: repo='deb http://apt.postgresql.org/pub/repos/apt xenial-pgdg main' state=present
 
 - name: add postgres repo key
-  sudo: yes
+  become: yes
   apt_key: url='http://apt.postgresql.org/pub/repos/apt/ACCC4CF8.asc' state=present
 
 - name: install system packages
-  sudo: yes
+  become: yes
   apt: pkg={{ item }} state=installed update_cache=yes
   with_items:
-      - postgresql-9.3
-      - postgresql-contrib
-      - libpq-dev             # Required for Ansible to interact with postgres
-      - python-psycopg2
+      - postgresql-9.5
+      - postgresql-contrib-9.5
+      - libpq-dev                # Required for Ansible to interact with postgres
+      - python-psycopg2          # Required for creating postgres user
 
 - name: allow password authentication for local socket users
-  sudo: yes
-  copy: src=pg_hba.conf dest=/etc/postgresql/9.3/main/pg_hba.conf force=yes
+  become: yes
+  copy: src=pg_hba.conf dest=/etc/postgresql/9.5/main/pg_hba.conf force=yes
   notify:
       - Restart Postgres
 
 - name: set up postgresql.conf
-  sudo: yes
-  copy: src=postgresql.conf dest=/etc/postgresql/9.3/main/postgresql.conf force=yes
+  become: yes
+  copy: src=postgresql.conf dest=/etc/postgresql/9.5/main/postgresql.conf force=yes
   notify:
       - Restart Postgres
 
 - name: create postgres user
-  sudo: yes
-  sudo_user: postgres
+  become: yes
+  become_user: postgres
   postgresql_user: name={{ db_user }} password={{ db_password }} state=present role_attr_flags=SUPERUSER,CREATEDB
 
 - name: create database
-  sudo: yes
-  sudo_user: postgres
+  become: yes
+  become_user: postgres
   postgresql_db: name={{ db_name }} owner={{ db_user }}
 
 - name: grant user database permissions
-  sudo: yes
-  sudo_user: postgres
+  become: yes
+  become_user: postgres
   postgresql_user: user={{ db_user }} db={{ db_name }} priv=ALL
