argon2 password hashing, new style middleware

--- a/provision/django/tasks/main.yml
+++ b/provision/django/tasks/main.yml
@@ -15,6 +15,7 @@
       - python3-dev             # for compiling pip packages
       - nginx-full              # nginx
       - redis-server            # redis
+      - libffi-dev              # for argon2
       - libpq-dev               # for psycopg2
       - libpcre3                # for uWSGI
       - libpcre3-dev            # for uWSGI
