--- a/provision/postgres/files/postgresql.conf
+++ b/provision/postgres/files/postgresql.conf
@@ -27,7 +27,7 @@
 # Memory units:  kB = kilobytes        Time units:  ms  = milliseconds
 #                MB = megabytes                     s   = seconds
 #                GB = gigabytes                     min = minutes
-#                                                   h   = hours
+#                TB = terabytes                     h   = hours
 #                                                   d   = days
 
 
@@ -56,7 +56,7 @@ external_pid_file = '/var/run/postgresql/9.5-main.pid'          # write an extra
 
 # - Connection Settings -
 
-listen_addresses = '*'     # what IP address(es) to listen on;
+listen_addresses = 'localhost'     # what IP address(es) to listen on;
                     # comma-separated list of addresses;
                     # defaults to 'localhost'; use '*' for all
                     # (change requires restart)
@@ -77,32 +77,33 @@ unix_socket_directories = '/var/run/postgresql' # comma-separated list of direct
 
 # - Security and Authentication -
 
-#authentication_timeout = 1min      # 1s-600s
-ssl = true              # (change requires restart)
-#ssl_ciphers = 'DEFAULT:!LOW:!EXP:!MD5:@STRENGTH'   # allowed SSL ciphers
-                    # (change requires restart)
-#ssl_renegotiation_limit = 512MB    # amount of data between renegotiations
+#authentication_timeout = 1min		# 1s-600s
+#ssl = off				# (change requires restart)
+#ssl_ciphers = 'HIGH:MEDIUM:+3DES:!aNULL' # allowed SSL ciphers
+					# (change requires restart)
+#ssl_prefer_server_ciphers = on		# (change requires restart)
+#ssl_ecdh_curve = 'prime256v1'		# (change requires restart)
 ssl_cert_file = '/etc/ssl/certs/ssl-cert-snakeoil.pem'      # (change requires restart)
 ssl_key_file = '/etc/ssl/private/ssl-cert-snakeoil.key'     # (change requires restart)
 #ssl_ca_file = ''           # (change requires restart)
 #ssl_crl_file = ''          # (change requires restart)
 #password_encryption = on
 #db_user_namespace = off
+#row_security = on
 
-# Kerberos and GSSAPI
+# GSSAPI using Kerberos
 #krb_server_keyfile = ''
-#krb_srvname = 'postgres'       # (Kerberos only)
 #krb_caseins_users = off
 
 # - TCP Keepalives -
 # see "man 7 tcp" for details
 
-#tcp_keepalives_idle = 0        # TCP_KEEPIDLE, in seconds;
-                    # 0 selects the system default
-#tcp_keepalives_interval = 0        # TCP_KEEPINTVL, in seconds;
-                    # 0 selects the system default
-#tcp_keepalives_count = 0       # TCP_KEEPCNT;
-                    # 0 selects the system default
+#tcp_keepalives_idle = 0		# TCP_KEEPIDLE, in seconds;
+					# 0 selects the system default
+#tcp_keepalives_interval = 0		# TCP_KEEPINTVL, in seconds;
+					# 0 selects the system default
+#tcp_keepalives_count = 0		# TCP_KEEPCNT;
+					# 0 selects the system default
 
 
 #------------------------------------------------------------------------------
@@ -111,18 +112,28 @@ ssl_key_file = '/etc/ssl/private/ssl-cert-snakeoil.key'     # (change requires r
 
 # - Memory -
 
-shared_buffers = 512MB          # min 128kB
-                    # (change requires restart)
-#temp_buffers = 8MB         # min 800kB
-#max_prepared_transactions = 0      # zero disables the feature
-                    # (change requires restart)
+shared_buffers = 512MB			# min 128kB
+					# (change requires restart)
+#huge_pages = try			# on, off, or try
+					# (change requires restart)
+#temp_buffers = 8MB			# min 800kB
+#max_prepared_transactions = 0		# zero disables the feature
+					# (change requires restart)
 # Note:  Increasing max_prepared_transactions costs ~600 bytes of shared memory
 # per transaction slot, plus lock space (see max_locks_per_transaction).
 # It is not advisable to set max_prepared_transactions nonzero unless you
 # actively intend to use prepared transactions.
-#work_mem = 1MB             # min 64kB
-#maintenance_work_mem = 16MB        # min 1MB
-#max_stack_depth = 2MB          # min 100kB
+#work_mem = 4MB				# min 64kB
+#maintenance_work_mem = 64MB		# min 1MB
+#autovacuum_work_mem = -1		# min 1MB, or -1 to use maintenance_work_mem
+#max_stack_depth = 2MB			# min 100kB
+#dynamic_shared_memory_type = posix	# the default is the first option
+					# supported by the operating system:
+					#   posix
+					#   sysv
+					#   windows
+					#   mmap
+					# use none to disable dynamic shared memory
 
 # - Disk -
 
@@ -152,6 +163,7 @@ shared_buffers = 512MB          # min 128kB
 # - Asynchronous Behavior -
 
 #effective_io_concurrency = 1       # 1-1000; 0 disables prefetching
+#max_worker_processes = 8
 
 
 #------------------------------------------------------------------------------
@@ -160,36 +172,40 @@ shared_buffers = 512MB          # min 128kB
 
 # - Settings -
 
-#wal_level = minimal            # minimal, archive, or hot_standby
-                    # (change requires restart)
-#fsync = on             # turns forced synchronization on or off
-#synchronous_commit = on        # synchronization level;
-                    # off, local, remote_write, or on
-#wal_sync_method = fsync        # the default is the first option
-                    # supported by the operating system:
-                    #   open_datasync
-                    #   fdatasync (default on Linux)
-                    #   fsync
-                    #   fsync_writethrough
-                    #   open_sync
-full_page_writes = off          # recover from partial page writes
-wal_buffers = -1           # min 32kB, -1 sets based on shared_buffers
-                    # (change requires restart)
-#wal_writer_delay = 200ms       # 1-10000 milliseconds
+#wal_level = minimal			# minimal, archive, hot_standby, or logical
+					# (change requires restart)
+#fsync = on				# turns forced synchronization on or off
+#synchronous_commit = on		# synchronization level;
+					# off, local, remote_write, or on
+#wal_sync_method = fsync		# the default is the first option
+					# supported by the operating system:
+					#   open_datasync
+					#   fdatasync (default on Linux)
+					#   fsync
+					#   fsync_writethrough
+					#   open_sync
+#full_page_writes = on			# recover from partial page writes
+#wal_compression = off			# enable compression of full-page writes
+#wal_log_hints = off			# also do full page writes of non-critical updates
+					# (change requires restart)
+#wal_buffers = -1			# min 32kB, -1 sets based on shared_buffers
+					# (change requires restart)
+#wal_writer_delay = 200ms		# 1-10000 milliseconds
 
 #commit_delay = 0           # range 0-100000, in microseconds
 #commit_siblings = 5            # range 1-1000
 
 # - Checkpoints -
 
-checkpoint_segments = 16        # in logfile segments, min 1, 16MB each
-#checkpoint_timeout = 5min      # range 30s-1h
-#checkpoint_completion_target = 0.5 # checkpoint target duration, 0.0 - 1.0
-#checkpoint_warning = 30s       # 0 disables
+#checkpoint_timeout = 5min		# range 30s-1h
+#max_wal_size = 1GB
+#min_wal_size = 80MB
+#checkpoint_completion_target = 0.5	# checkpoint target duration, 0.0 - 1.0
+#checkpoint_warning = 30s		# 0 disables
 
 # - Archiving -
 
-#archive_mode = off     # allows archiving to be done
+#archive_mode = off		# enables archiving; off, on, or always
                 # (change requires restart)
 #archive_command = ''       # command to use to archive a logfile segment
                 # placeholders: %p = path of file to archive
@@ -211,6 +227,11 @@ checkpoint_segments = 16        # in logfile segments, min 1, 16MB each
                 # (change requires restart)
 #wal_keep_segments = 0      # in logfile segments, 16MB each; 0 disables
 #wal_sender_timeout = 60s   # in milliseconds; 0 disables
+
+#max_replication_slots = 0	# max number of replication slots
+				# (change requires restart)
+#track_commit_timestamp = off	# collect timestamp of transaction commit
+				# (change requires restart)
 
 # - Master Server -
 
@@ -240,6 +261,8 @@ checkpoint_segments = 16        # in logfile segments, min 1, 16MB each
 #wal_receiver_timeout = 60s     # time that receiver waits for
                     # communication from master
                     # in milliseconds; 0 disables
+#wal_retrieve_retry_interval = 5s	# time to wait before retrying to
+					# retrieve WAL after a failed attempt
 
 
 #------------------------------------------------------------------------------
@@ -267,7 +290,7 @@ checkpoint_segments = 16        # in logfile segments, min 1, 16MB each
 #cpu_tuple_cost = 0.01          # same scale as above
 #cpu_index_tuple_cost = 0.005       # same scale as above
 #cpu_operator_cost = 0.0025     # same scale as above
-#effective_cache_size = 128MB
+#effective_cache_size = 4GB
 
 # - Genetic Query Optimizer -
 
@@ -301,7 +324,7 @@ checkpoint_segments = 16        # in logfile segments, min 1, 16MB each
                     # requires logging_collector to be on.
 
 # This is used when logging to stderr:
-#logging_collector = off        # Enable capturing of stderr and csvlog
+logging_collector = off        # Enable capturing of stderr and csvlog
                     # into log files. Required to be on for
                     # csvlogs.
                     # (change requires restart)
@@ -415,10 +438,18 @@ log_line_prefix = '%t '         # special values:
                     # e.g. '<%u%%%d> '
 #log_lock_waits = off           # log lock waits >= deadlock_timeout
 #log_statement = 'none'         # none, ddl, mod, all
+#log_replication_commands = off
 #log_temp_files = -1            # log temporary files equal or larger
                     # than the specified size in kilobytes;
                     # -1 disables, 0 logs all temp files
 log_timezone = 'UTC'
+
+
+# - Process Title -
+
+#cluster_name = ''			# added to process titles if nonempty
+					# (change requires restart)
+#update_process_title = on
 
 
 #------------------------------------------------------------------------------
@@ -432,7 +463,6 @@ log_timezone = 'UTC'
 #track_io_timing = off
 #track_functions = none         # none, pl, all
 #track_activity_query_size = 1024   # (change requires restart)
-#update_process_title = on
 #stats_temp_directory = 'pg_stat_tmp'
 
 
@@ -465,7 +495,7 @@ log_timezone = 'UTC'
 #autovacuum_analyze_scale_factor = 0.1  # fraction of table size before analyze
 #autovacuum_freeze_max_age = 200000000  # maximum XID age before forced vacuum
                     # (change requires restart)
-#autovacuum_multixact_freeze_max_age = 400000000    # maximum Multixact age
+#autovacuum_multixact_freeze_max_age = 400000000    # maximum multixact age
                     # before forced vacuum
                     # (change requires restart)
 #autovacuum_vacuum_cost_delay = 20ms    # default vacuum cost delay for
@@ -482,12 +512,12 @@ log_timezone = 'UTC'
 
 # - Statement Behavior -
 
-#search_path = '"$user",public'     # schema names
+#search_path = '"$user", public'     # schema names
 #default_tablespace = ''        # a tablespace name, '' uses the default
 #temp_tablespaces = ''          # a list of tablespace names, '' uses
                     # only default tablespace
 #check_function_bodies = on
-default_transaction_isolation = 'read committed'
+#default_transaction_isolation = 'read committed'
 #default_transaction_read_only = off
 #default_transaction_deferrable = off
 #session_replication_role = 'origin'
@@ -500,16 +530,18 @@ default_transaction_isolation = 'read committed'
 #bytea_output = 'hex'           # hex, escape
 #xmlbinary = 'base64'
 #xmloption = 'content'
+#gin_fuzzy_search_limit = 0
+#gin_pending_list_limit = 4MB
 
 # - Locale and Formatting -
 
-datestyle = 'iso, mdy'
+#datestyle = 'iso, mdy'
 #intervalstyle = 'postgres'
 timezone = 'UTC'
 #timezone_abbreviations = 'Default'     # Select the set of available time zone
                     # abbreviations.  Currently, there are
                     #   Default
-                    #   Australia
+                    #   Australia (historical usage)
                     #   India
                     # You can create your own file in
                     # share/timezonesets/.
@@ -517,8 +549,7 @@ timezone = 'UTC'
 client_encoding = 'UTF8'         # actually, defaults to database encoding
 
 # These settings are initialized by initdb, but they can be changed.
-lc_messages = 'en_US.UTF-8'         # locale for system error message
-                    # strings
+lc_messages = 'en_US.UTF-8'         # locale for system error message strings
 lc_monetary = 'en_US.UTF-8'         # locale for monetary formatting
 lc_numeric = 'en_US.UTF-8'          # locale for number formatting
 lc_time = 'en_US.UTF-8'             # locale for time formatting
@@ -530,6 +561,7 @@ default_text_search_config = 'pg_catalog.english'
 
 #dynamic_library_path = '$libdir'
 #local_preload_libraries = ''
+#session_preload_libraries = ''
 
 
 #------------------------------------------------------------------------------
@@ -557,6 +589,7 @@ default_text_search_config = 'pg_catalog.english'
 #default_with_oids = off
 #escape_string_warning = on
 #lo_compat_privileges = off
+#operator_precedence_warning = off
 #quote_all_identifiers = off
 #sql_inheritance = on
 #standard_conforming_strings = on
