--- a/provision/postgres/tasks/main.yml
+++ b/provision/postgres/tasks/main.yml
@@ -2,9 +2,13 @@
   become: yes
   apt_repository: repo='deb http://apt.postgresql.org/pub/repos/apt xenial-pgdg main' state=present
 
+- name: download key
+  become: yes
+  command: "wget http://apt.postgresql.org/pub/repos/apt/ACCC4CF8.asc -O /tmp/ACCC4CF8.asc"
+
 - name: add postgres repo key
   become: yes
-  apt_key: url='http://apt.postgresql.org/pub/repos/apt/ACCC4CF8.asc' state=present
+  command: "apt-key add /tmp/ACCC4CF8.asc"
 
 - name: install system packages
   become: yes
