--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,28 @@
-Django[argon2]==1.10.4
+Django[argon2]==1.10.5
 Markdown==2.6.7
-Pillow==3.4.2
-Werkzeug==0.11.11
+Pillow==4.0.0
+Pygments==2.2.0
+Werkzeug==0.11.15
 anyjson==0.3.3
-amqp==2.1.1
+amqp==2.1.4
 bbcode==1.0.24
-beautifulsoup4==4.5.1
-billiard==3.3.0.23
-celery==3.1.23
-dj-database-url==0.4.1
+beautifulsoup4==4.5.3
+billiard==3.5.0.2
+celery==4.0.2
+dj-database-url==0.4.2
 django-debug-toolbar==1.6
 django-extensions==1.7.5
 django-grappelli==2.9.1
 django-picklefield==0.3.2
 django-ratelimit==1.0.1
-django-redis==4.6.0
+django-redis==4.7.0
 django-su==0.5.2
-kombu==3.0.37
+kombu==4.0.2
 psycopg2==2.6.2
 pytz>=2016.10
 redis==2.10.5
-requests==2.12.3
+requests==2.12.5
 six==1.10.0
 sqlparse==0.2.2
-tqdm==4.10.0
+tqdm==4.11.1
 uWSGI==2.0.14
