--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,30 @@
-Django[argon2]==1.10.5
-Markdown==2.6.7
-Pillow==4.0.0
+Django[argon2]==1.11.6
+Markdown==2.6.9
+Pillow==4.2.1
 Pygments==2.2.0
-Werkzeug==0.11.15
+Werkzeug==0.12.2
 anyjson==0.3.3
-amqp==2.1.4
-bbcode==1.0.24
-beautifulsoup4==4.5.3
-billiard==3.5.0.2
-celery==4.0.2
+amqp==2.2.2
+bbcode==1.0.26
+beautifulsoup4==4.6.0
+billiard==3.5.0.3
+celery==4.1.0
+cffi==1.11.0
 dj-database-url==0.4.2
-django-debug-toolbar==1.6
-django-extensions==1.7.5
-django-grappelli==2.9.1
-django-picklefield==0.3.2
+django-debug-toolbar==1.8
+django-extensions==1.9.1
+django-grappelli==2.10.1
+django-picklefield==1.0.0
 django-ratelimit==1.0.1
-django-redis==4.7.0
+django-redis==4.8.0
 django-su==0.5.2
-kombu==4.0.2
-psycopg2==2.6.2
+kombu==4.1.0
+psycopg2==2.7.3.1
+pycparser==2.18
 pytz>=2016.10
-redis==2.10.5
-requests==2.12.5
-six==1.10.0
-sqlparse==0.2.2
-tqdm==4.11.1
-uWSGI==2.0.14
+redis==2.10.6
+requests==2.18.4
+six==1.11.0
+sqlparse==0.2.4
+tqdm==4.17.1
+uWSGI==2.0.15
