--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ django-picklefield==1.0.0
 django-ratelimit==1.0.1
 django-redis==4.8.0
 django-su==0.5.2
+djangorestframework==3.7.1
 kombu==4.1.0
 psycopg2==2.7.3.1
 pycparser==2.18
