--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ django-ratelimit==1.0.1
 django-redis==4.8.0
 django-su==0.5.2
 djangorestframework==3.7.1
+djangorestframework-camel-case==1.0b1
 kombu==4.1.0
 psycopg2==2.7.3.1
 pycparser==2.18
