update core dependencies

--- a/package.json
+++ b/package.json
@@ -14,25 +14,24 @@
     "bbcode-to-react": "^0.2.6",
     "es6-promise": "^4.1.0",
     "object-assign": "^4.1.1",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-redux": "^5.0.3",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-redux": "^5.0.6",
     "react-router": "3.x.x",
-    "react-router-redux": "^4.0.8",
-    "redux": "^3.6.0",
+    "react-router-redux": "4.x.x",
+    "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "@types/object-assign": "^4.0.30",
     "@types/promise": "^7.1.30",
-    "@types/react": "^15.0.16",
-    "@types/react-bootstrap": "0.0.47",
-    "@types/react-dom": "^0.14.23",
-    "@types/react-router": "^3.0.9",
-    "@types/react-router-redux": "^4.0.43",
+    "@types/react": "^16.0.18",
+    "@types/react-dom": "^16.0.2",
+    "@types/react-router": "3.x.x",
+    "@types/react-router-redux": "4.x.x",
     "awesome-typescript-loader": "^3.1.2",
-    "css-loader": "^0.27.3",
-    "del": "^2.2.2",
+    "css-loader": "^0.28.7",
+    "del": "^3.0.0",
     "express": "^4.15.3",
     "gulp": "^3.9.1",
     "gulp-connect": "^5.0.0",
@@ -44,13 +43,13 @@
     "redux-devtools-log-monitor": "^1.2.0",
     "request": "^2.81.0",
     "sass-loader": "^6.0.3",
-    "source-map-loader": "^0.2.0",
-    "style-loader": "^0.16.0",
-    "tslint": "^4.5.1",
+    "source-map-loader": "^0.2.3",
+    "style-loader": "^0.19.0",
+    "tslint": "^5.8.0",
     "typescript": "^2.2.1",
     "uglify-js": "^2.8.0",
     "uglifyjs-webpack-plugin": "^0.4.3",
-    "webpack": "^2.2.1",
+    "webpack": "^3.8.1",
     "webpack-dev-server": "^2.4.2"
   }
 }
