Add deployment scripts

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express": "^4.15.3",
     "gulp": "^3.9.1",
     "gulp-connect": "^5.0.0",
+    "gulp-replace": "^0.6.1",
     "gutil": "^1.6.4",
     "node-sass": "^4.5.1",
     "react-hot-loader": "^3.0.0-beta.7",
@@ -42,6 +43,7 @@
     "redux-devtools-dock-monitor": "^1.1.1",
     "redux-devtools-log-monitor": "^1.2.0",
     "request": "^2.81.0",
+    "run-sequence": "^2.2.0",
     "sass-loader": "^6.0.3",
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.19.0",
