--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,8 @@
         "lib": ["es5", "dom", "es2015.promise"],
         "jsx": "react",
         "allowJs": true,
+        "noUnusedLocals": true,
+        "noFallthroughCasesInSwitch": true,
         "typeRoots": [
             "./node_modules/@types"
         ]
