--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,10 @@ app
 dist
 drop
 temp
+
+# local Visual Studio Git ignore files
+/.vs/jumpcut-web4/v15/.suo
+/.vs/slnx.sqlite
+/.vs/ProjectSettings.json
+/.vs/config/applicationhost.config
+/.vs/.gitlab
