--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
         "jsx": "react",
         "allowJs": true,
         "noUnusedLocals": true,
+        "noUnusedParameters": false,
         "noFallthroughCasesInSwitch": true,
         "typeRoots": [
             "./node_modules/@types"
