Add hidden tag to bbcode

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
         "noUnusedParameters": false,
         "noFallthroughCasesInSwitch": true,
         "typeRoots": [
-            "./node_modules/@types"
+            "./node_modules/@types",
+            "./typings"
         ]
     },
     "include": [
