--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ cffi==1.11.2
 dj-database-url==0.4.2
 django-debug-toolbar==1.9.1
 django-extensions==1.9.9
-django-grappelli==2.10.1
+django-grappelli==2.11.1
 django-picklefield==1.0.0
 django-ratelimit==1.1.0
 django-redis==4.8.0
@@ -30,6 +30,6 @@ requests==2.18.4
 six==1.11.0
 sqlparse==0.2.4
 tqdm==4.19.5
-uWSGI==2.0.15
-django-cors-headers==2.1.0
-drf-yasg==1.5.0
+uWSGI==2.0.9
+django-cors-headers==2.2.0
+drf-yasg==1.5.1[validation]
