Update .gitlab-ci.yml for codecov

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -70,3 +70,6 @@ codequality:
       "registry.gitlab.com/gitlab-org/security-products/codequality:$SP_VERSION" /code
   artifacts:
     paths: [codeclimate.json]
+    
+  tags:
+    - codequality
