--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,8 @@ cache:
 # services such as redis or postgres
 before_script:
   # Uncomment next line if your Django app needs a JS runtime:
-  # - apt-get update -q && apt-get install nodejs -yqq
+  - apt-get update -q && apt-get install nodejs -yqq
+  - apt-get update -q && apt-get install python3.5 -yqq
   - pip install -r requirements.txt
   - pip install -r testing_requirements.txt
   - pip install coverage
