--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 # This file is a template, and might need editing before it works on your project.
 # Official framework image. Look for the different tagged releases at:
 # https://hub.docker.com/r/library/python
-image: python:3.5
+image: ubuntu:16.04
 
 # Pick zero or more services to be used on all builds.
 # Only needed when using a docker container to run your tests in.
@@ -23,7 +23,7 @@ cache:
 before_script:
   # Uncomment next line if your Django app needs a JS runtime:
   - apt-get update -q && apt-get install nodejs -yqq
-  - apt-get update -q && apt-get install python3.5 -yqq
+  - apt-get update -q && apt-get install python-pip -yqq
   - pip install -r requirements.txt
   - pip install -r testing_requirements.txt
   - pip install coverage
