--- a/requirements.txt
+++ b/requirements.txt
@@ -32,3 +32,6 @@ uWSGI==2.0.17
 django-cors-headers==2.2.0
 django-filter==2.0.0.dev1
 coreapi==2.3.3
+Sphinx==1.7.2
+sphinx-bootstrap-theme==0.6.4
+django-docs==0.2.1
