--- a/requirements.txt
+++ b/requirements.txt
@@ -34,4 +34,6 @@ django-filter==2.0.0.dev1
 coreapi==2.3.3
 Sphinx==1.7.2
 sphinx-bootstrap-theme==0.6.4
-django-docs==0.2.1
+# django-docs==0.2.1
+# Updated Version
+git+git@github.com:littlepea/django-docs.git
