--- a/requirements.txt
+++ b/requirements.txt
@@ -33,7 +33,8 @@ django-cors-headers==2.2.0
 django-filter==2.0.0.dev1
 coreapi==2.3.3
 Sphinx==1.7.2
-sphinx-bootstrap-theme==0.6.4
 # django-docs==0.2.1
 # Updated Version
 git+https://github.com/TheSaltman/django-docs.git
+sphinx_rtd_theme==0.2.5b2
+djangorestframework-camel-case>=1.0b1
