--- a/requirements.txt
+++ b/requirements.txt
@@ -12,17 +12,17 @@ celery==4.1.0
 cffi==1.11.2
 dj-database-url==0.4.2
 django-debug-toolbar==1.9.1
-django-extensions==1.9.9
+django-extensions==2.0.6
 django-grappelli==2.11.1
 django-picklefield==1.0.0
 django-ratelimit==1.1.0
 django-redis==4.8.0
 django-su==0.6.0
-djangorestframework==3.7.7
+djangorestframework==3.8.0
 kombu==4.1.0
 psycopg2==2.7.3.2
 pycparser==2.18
-pytz>=2016.10
+pytz==2017.2
 redis==2.10.6
 requests==2.18.4
 six==1.11.0
@@ -31,6 +31,7 @@ tqdm==4.19.5
 uWSGI==2.0.17
 django-cors-headers==2.2.0
 django-filter==2.0.0.dev1
+coreschema==0.0.4
 coreapi==2.3.3
 Sphinx==1.7.2
 # django-docs==0.2.1
@@ -38,3 +39,4 @@ Sphinx==1.7.2
 git+https://github.com/TheSaltman/django-docs.git
 sphinx_rtd_theme==0.2.5b2
 djangorestframework-camel-case>=1.0b1
+django-guardian==1.4.9
