--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
         "noUnusedLocals": true,
         "noUnusedParameters": false,
         "noFallthroughCasesInSwitch": true,
+        "strictNullChecks": true,
         "typeRoots": [
             "./node_modules/@types",
             "./typings"
