--- a/uwsgi-tracker.ini
+++ b/uwsgi-tracker.ini
@@ -2,7 +2,7 @@
 chdir = /var/www/streisand/streisand
 module = streisand.tracker_wsgi:application
 env = DJANGO_SETTINGS_MODULE=streisand.settings.tracker_settings
-home = /home/ubuntu/.venv
+home = /home/vagrant/.venv
 master = True
 pidfile = /tmp/streisand-tracker-master.pid
 vacuum = True
