--- a/uwsgi-www.ini
+++ b/uwsgi-www.ini
@@ -2,7 +2,7 @@
 chdir = /var/www/streisand/streisand
 module = streisand.www_wsgi:application
 env = DJANGO_SETTINGS_MODULE=streisand.settings.www_settings
-home = /home/ubuntu/.venv
+home = /home/vagrant/.venv
 master = True
 pidfile = /tmp/streisand-www-master.pid
 vacuum = True
