--- a/requirements.txt
+++ b/requirements.txt
@@ -41,4 +41,4 @@ djangorestframework-camel-case>=1.0b1
 https://github.com/philipn/django-rest-framework-filters/archive/master.zip
 # djangorestframework-filters
 https://github.com/darklow/django-suit/tarball/v2
-djangorestframework-simplejwt==3.2.3
+djangorestframework-jwt>=1.11.0
