--- a/requirements.txt
+++ b/requirements.txt
@@ -42,3 +42,4 @@ https://github.com/philipn/django-rest-framework-filters/archive/master.zip
 # djangorestframework-filters
 https://github.com/darklow/django-suit/tarball/v2
 djangorestframework-jwt>=1.11.0
+drf-yasg>=1.6.1
