--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,21 +18,13 @@ build_react:
     paths:
       - build
 
-deploy_react:
+deploy:
+  image: alpine
   stage: deploy
   script:
-    - echo "====== Deploy to production server ======"
-    - apt-get update && apt-get upgrade
-    - echo "====== Add target servers secret key ======"
-    - mkdir ~/.ssh
-    - echo $TARGET_SERVER_SECRET_KEY_BASE64 | base64 -d > ~/.ssh/id_rsa
-    - chmod 700 ~/.ssh && chmod 600 ~/.ssh/*
-    - echo "====== Test ssh connection ======"
-    - ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -T "$TARGET_SERVER_USER_HOST"
-    - echo "====== Install rsync on remote server ======"
-    - ssh -T -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null  "$TARGET_SERVER_USER_HOST" 'sudo apt-get install rsync -y'
-    - echo "====== Sync local and remote directory ======"
-    # Ending "/" in string "./build/" is important!
-    - rsync -azPq -e "ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null" --delete ./build/ "$TARGET_SERVER_USER_HOST:$TARGET_SERVER_PATH"
-  only:
-  - master
+    - apk add --no-cache rsync openssh
+    - mkdir -p ~/.ssh
+    - echo "$SSH_PRIVATE_KEY" >> ~/.ssh/id_dsa
+    - chmod 600 ~/.ssh/id_dsa
+    - echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config
+    - rsync -rav --delete dist/ gitlab-runner@ronzertnert.me:/home/
