--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,4 @@
-# This file is a template, and might need editing before it works on your project.
-# Official framework image. Look for the different tagged releases at:
-# https://hub.docker.com/r/library/python
-image: python:3.5
+image: python:3.6
 
 # Pick zero or more services to be used on all builds.
 # Only needed when using a docker container to run your tests in.
@@ -21,8 +18,8 @@ cache:
 # This is a basic example for a gem or script which doesn't use
 # services such as redis or postgres
 before_script:
-  - pip install -r requirements.txt
-  - pip install -r testing_requirements.txt
+  - pip install -r backend/requirements.txt
+  - pip install -r backend/testing_requirements.txt
   - pip install coverage
 
 
@@ -45,10 +42,10 @@ before_script:
 test:
   
   script:
-  - flake8 .
-  - ./streisand/manage.py makemigrations
-  - ./streisand/manage.py migrate
-  - coverage run ./streisand/manage.py test streisand
+  - flake8 backend
+  - backend/src/manage.py makemigrations
+  - backend/src/manage.py migrate
+  - coverage run backend/src/manage.py test backend/src
   - coverage report -m
   
 codequality:
@@ -70,7 +67,5 @@ codequality:
   artifacts:
     paths: [codeclimate.json]
     expire_in: 1 week
-
-    
   tags:
     - codequality
