--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,7 +42,7 @@ before_script:
 test:
   
   script:
-  - flake8 backend/src .
+  - flake8 /backend/src/ .
   - backend/src/manage.py makemigrations
   - backend/src/manage.py migrate
   - coverage run backend/src/manage.py test backend/src
