Update .gitlab-ci.yml for docker registry take 2

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,11 +11,11 @@ services:
  - docker:dind
 
 variables:
-  CONTAINER_BACKEND_IMAGE: registry.ronzertnert.me/JumpCut/JumpCut/backend-ci:$CI_COMMIT_REF_NAME
-  CONTAINER_FRNTEND_IMAGE: registry.ronzertnert.me/JumpCut/JumpCut/frontend-ci:$CI_COMMIT_REF_NAME
+  CONTAINER_BACKEND_IMAGE: git.ronzertnert.me/JumpCut/JumpCut/backend-ci:$CI_COMMIT_REF_NAME
+  CONTAINER_FRNTEND_IMAGE: git.ronzertnert.me/JumpCut/JumpCut/frontend-ci:$CI_COMMIT_REF_NAME
 
 before_script:
-  - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN registry.ronzertnert.me
+  - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN git.ronzertnert.me:4567
 
 build:
   stage: build
