--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ variables:
   CONTAINER_BACKEND_IMAGE: registry.ronzertnert.me/JumpCut/JumpCut:$CI_COMMIT_REF_NAME
 
 before_script:
-  -  echo CI_REGISTRY_USER  $CI_REGISTRY_PASSWORD
+  -  echo $CI_REGISTRY_USER  $CI_REGISTRY_PASSWORD
   -  docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD registry.ronzertnert.me
 
 build:
@@ -47,7 +47,7 @@ python_tests:
 release-develop:
   stage: release
   script:
-    - docker pull $CI_REGISTRY frontend
+    - docker pull $CI_REGISTRY
       # and then build frontend webpack, build up worker images etc.
       # push all images to the registry with the develop tag
   only:
@@ -56,7 +56,7 @@ release-develop:
 release-production:
   stage: release
   script:
-    - docker pull $CI_REGISTRY frontend
+    - docker pull $CI_REGISTRY
       # and then build frontend webpack, build up worker images etc.
       # push all images to the registry with the production tag
   only:
