Update .gitlab-ci.yml more ci testing

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,19 +27,19 @@ build:
 python_linter:
   stage: test
   script:
-    - docker pull $CI_REGISTRY
+    - docker buildpull $CI_REGISTRY
     - docker run $CI_REGISTRY invoke run-python-linter
 
 migrations_and_fixtures:
   stage: test
   script:
-    - docker pull $CI_REGISTRY
+    - docker build —-pull -t $CI_REGISTRY back
     - docker run $CI_REGISTRY -e "DATABASE_URL=postgres://postgres:postgres@postgres:5432/ci" invoke clean-slate 
 
 python_tests:
   stage: test
   script:
-    - docker pull $CI_REGISTRY
+    - docker build —-pull -t $CI_REGISTRY back
     - docker $CI_REGISTRY ci -e "DATABASE_URL=postgres://postgres:postgres@postgres:5432/ci" invoke run-python-tests --coverage
 
 # TODO frontend linter/tests?
@@ -47,7 +47,7 @@ python_tests:
 release-develop:
   stage: release
   script:
-    - docker pull $CI_REGISTRY
+    - docker build —-pull -t $CI_REGISTRY back
       # and then build frontend webpack, build up worker images etc.
       # push all images to the registry with the develop tag
   only:
@@ -56,7 +56,7 @@ release-develop:
 release-production:
   stage: release
   script:
-    - docker pull $CI_REGISTRY
+    - docker build —-pull -t $CI_REGISTRY back
       # and then build frontend webpack, build up worker images etc.
       # push all images to the registry with the production tag
   only:
